# ccstatusline-native

./: AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml  verify-tap-token.yml
scripts/: compare-reference.sh
src/: ansi.rs  app.rs  config.rs  context.rs  effort.rs  fallback.rs  git.rs  lib.rs  main.rs  render.rs  status.rs  terminal.rs  widgets.rs
tests/: cli.rs
tests/fixtures/: context-transcript.jsonl  settings-git-summary.json  settings.json  status-context-env.json  status-transcript.json  status.json
